# agent-sandbox

./: .env.example  .gitignore  CLAUDE.md  README.md  autonomous-state.json  feature_list.json  git-ops.sh  init.sh
apps/api/: README.md  pyproject.toml
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/api/: __init__.py  artifacts.py  deployments.py  health.py  logs.py  metrics.py  templates.py
apps/api/src/app/core/: __init__.py  config.py
apps/api/src/app/services/: __init__.py  cleanup.py  docker.py  git_artifacts.py  lifecycle.py  storage.py
apps/api/src/app/ws/: progress.py
docker/: Dockerfile.api  docker-compose.yml
docker/traefik/: traefik.yml
templates/fastapi/: .env.example  Dockerfile  pyproject.toml  template.json
templates/fastapi/src/app/: __init__.py  main.py
templates/react-vite/: Dockerfile  index.html  package.json  template.json
templates/react-vite/src/: App.tsx  index.css
